# hr-automation-pc

./: .gitignore
.github/workflows/: release-desktop.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/.github/workflows/: release-desktop.yml
client/src/: App.tsx  index.css
client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: main.json
client/src-tauri/src/: main.rs
client/src/components/: Layout.tsx
client/src/lib/: api.ts
client/src/pages/: Candidates.tsx  Jobs.tsx  Login.tsx  Matches.tsx  Settings.tsx
server/: .env.example  requirements.txt
server/app/: config.py  errors.py  main.py  models.py  schemas.py
server/app/routes/: auth.py  candidates.py  evaluation.py  files.py  jobs.py  matches.py  screening.py  settings.py
server/app/services/: auth.py  embedding.py  evaluation.py  llm.py  matching.py  parser.py  screening.py
